enable preview to docker